posiGen_FullsendBox/src/objects/Account_Balance_by_Entity__c.object
<CustomObject>
    <description>Displays breakdown of customer balance by entity and in entity&apos;s base currency</description>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Customer_Balances_by_Entity</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Balance__c</fullName>
        <label>Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Account Balance by Entity</label>
    <nameField>
        <label>Intacct Entity Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Account Balances by Entity</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>